v 1.4.3.0 (4 aug)
Heatsinker

v 1.4.2.1 (3 aug)
AI Core will now be affected by Energy challenge
Hawking Harvester will now be required to complete Energy challenge
Excluded most of the important resources from the AI Apocalypse effect

Added Japanese language to the list of available localizations
__
changes by coderpatsy:

Fixed HR Harverster not working correctly before the Dark Furure
Fixed Neural Networks effect not being correctly applied

v 1.4.2.0 (1 aug)
Umbra / HR Harvester
Quantum Computing

Elders will now display max energy limit
Chat will no longer require flash
Chat link will now be highlighted in bold 'cause nobody can find it.
Font size in resource panel will be now saved
Energy penalty of neural networks will now work corretly
AI is still perfectly safe


v 1.4.1.0 (24 jul)
Minor redesign of AI upgrade
Redshift will not be enabled for all players by default anymore
Redshift will now correctly calculate paragon bonuses
Relic stations will now have limited production if AM level is not sufficient
AI Bases


v 1.4.0.9 (14 jun)

Sky palace will now require megaliths instead of gold. Every level of SP will boost gold cap by 1%
UU will now require slightly less gold
SS will now require slightly less ivory.

Added x25 and xAll options for tc refine

v 1.4.0.8 (5 jun)

Fixed issues with Shatter TC visibility

High level Ziggurat Upgrades will now require gold.
Burn paragon button will now go at the bottom of the panel.

Zebra diplomacy will now explain upgrade in more details.
Engineering will now explain upgrade in more details.
Cargo Ships were renamed to Expanded Cargo.
Navigation will explain how culture price works.

Codex upgrades will now provide 5% multiplicative bonus to the craft

v 1.4.0.7 (7 apr)

Unicorn Necropolis
Spice Refinery

Fixed resources not being highlighted for buildings
Fixed tonns of issues from previous update

v 1.4.0.6 (20 mar)

Void Rift price is reduced from 100 to 75
Void Rift effect is increased from 1% to 2%