@@ -1,6 +1,12 @@
 v 1.4.3.0 (4 aug)
 Heatsinker
 
+changes by Exadv1:
+System Shock
+
+changes by coderpatsy:
+Space Beacon and AI core fixes
+
 v 1.4.2.1 (3 aug)
 AI Core will now be affected by Energy challenge
 Hawking Harvester will now be required to complete Energy challenge
